User Service, File Service | Fixed bugs